force-app/main/default/objects/Case/fields/Accepted_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Datetime__c</fullName>
    <label>Accepted Datetime</label>
    <type>DateTime</type>
</CustomField>