force-app/main/default/objects/Case/fields/Account_Contact__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact__c</fullName>
    <label>Account Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>