force-app/main/default/objects/Case/fields/Account_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Email__c</fullName>
    <label>Account Contact Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>