force-app/main/default/objects/Case/fields/Account_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Phone__c</fullName>
    <label>Account Contact Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>