force-app/main/default/objects/Case/fields/Account_EVO_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_EVO_Key__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account EVO Key</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Evo Key</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>