force-app/main/default/objects/Case/fields/Account_Legacy_System_Cd__c.field-meta.xml
<CustomField>
    <fullName>Account_Legacy_System_Cd__c</fullName>
    <formula>Account.Legacy_System_Cd__c</formula>
    <label>Account Legacy System Cd</label>
    <type>Text</type>
</CustomField>