force-app/main/default/objects/Case/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Used for SFO so CS can lookup by Account Number not just by name</description>
    <label>Account Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>