force-app/main/default/objects/Case/fields/Account_Primary_Sales_Rep2__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Sales_Rep2__c</fullName>
    <formula>Account.Primary_Sales_Rep_Name__r.Name</formula>
    <label>Account Primary Sales Rep</label>
    <type>Text</type>
</CustomField>