force-app/main/default/objects/Case/fields/Account_Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Ship_To_Address__c</fullName>
    <formula>ShipToAccount__r.Address_Line1__c + &apos;, &apos; + ShipToAccount__r.Address_Line2__c + &apos;, &apos; + ShipToAccount__r.City__c + &apos;, &apos; + ShipToAccount__r.State__c + &apos;, &apos; + ShipToAccount__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Ship To Address</label>
    <type>Text</type>
</CustomField>