force-app/main/default/objects/Case/fields/Account_Ship_To_Address_from_Form__c.field-meta.xml
<CustomField>
    <fullName>Account_Ship_To_Address_from_Form__c</fullName>
    <description>SALES SUPPORT VENDOR CLAIM FS&amp;PKG</description>
    <inlineHelpText>The manually added Ship To location added to the form</inlineHelpText>
    <label>Account Ship To Address from Form</label>
    <length>200</length>
    <type>Text</type>
</CustomField>