force-app/main/default/objects/Case/fields/Account_SysDivBillTo__c.field-meta.xml
<CustomField>
    <fullName>Account_SysDivBillTo__c</fullName>
    <formula>Account.Account_SysDivBillTo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SysDivBillTo</label>
    <type>Text</type>
</CustomField>