force-app/main/default/objects/Case/fields/AccountShipToLookup__c.field-meta.xml
<CustomField>
    <fullName>AccountShipToLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SALES SUPPORT VENDOR CLAIM PROCESS FS&amp;PKG</description>
    <label>Account Ship To Lookup</label>
    <referenceTo>Ship_To__c</referenceTo>
    <relationshipLabel>Cases (Ship To Lookup)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>