force-app/main/default/objects/Case/fields/Actions_Taken_Item_3__c.field-meta.xml
<CustomField>
    <fullName>Actions_Taken_Item_3__c</fullName>
    <label>Actions Taken? Item #3</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>