force-app/main/default/objects/Case/fields/Additional_Comments_from_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments_from_Submitter__c</fullName>
    <label>Additional Comments from Submitter</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>