force-app/main/default/objects/Case/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <label>Additional Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>