force-app/main/default/objects/Case/fields/Age_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Age_Calculation__c</fullName>
    <description>Calculates the number of days between Open and Close</description>
    <formula>IF( 
ISNULL (DATEVALUE( ClosedDate )) ,  
TODAY() - DATEVALUE(CreatedDate), 
DATEVALUE( ClosedDate ) - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzAge Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>