force-app/main/default/objects/Case/fields/ANI_List1__c.field-meta.xml
<CustomField>
    <fullName>ANI_List1__c</fullName>
    <formula>Account.CSPs_list__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ANI List</label>
    <type>Text</type>
</CustomField>