force-app/main/default/objects/Case/fields/Approval_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approval_Amount__c</fullName>
    <label>Approval Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>