force-app/main/default/objects/Case/fields/Assigned_to_CSP_From_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_CSP_From_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned to CSP From Queue?</label>
    <type>Checkbox</type>
</CustomField>