force-app/main/default/objects/Case/fields/Auto_Assign_Method__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assign_Method__c</fullName>
    <label>Auto-Assign Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Tax Resource</fullName>
            </value>
            <value>
                <fullName>Default Queue</fullName>
            </value>
            <value>
                <fullName>Delegated Approver</fullName>
            </value>
            <value>
                <fullName>Related Team Case Default Queue</fullName>
            </value>
            <value>
                <fullName>Round Robin Assigner</fullName>
            </value>
            <value>
                <fullName>Specified User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>