force-app/main/default/objects/Case/fields/Bill_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Number__c</fullName>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To #</label>
    <type>Text</type>
</CustomField>