force-app/main/default/objects/Case/fields/Buying_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Buying_Pattern__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzBuying Pattern</label>
    <type>Text</type>
</CustomField>