force-app/main/default/objects/Case/fields/By_Hour__c.field-meta.xml
<CustomField>
    <fullName>By_Hour__c</fullName>
    <description>Number of Cases by Hour for report calculation</description>
    <formula>TEXT(VALUE( LEFT( Time_Case_Created__c , LEN( Time_Case_Created__c ) - 6)) + IF(RIGHT( Time_Case_Created__c ,2) = &apos;PM&apos;, 12, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>By Hour</label>
    <type>Text</type>
</CustomField>