force-app/main/default/objects/Case/fields/CAR_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>CAR_Creation_Date__c</fullName>
    <description>QA data tracking for issue resolution, QA fills in manually</description>
    <label>CAR Creation Date</label>
    <type>Date</type>
</CustomField>