force-app/main/default/objects/Case/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <description>Sales Support for tracking their work</description>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Receivable</fullName>
            </value>
            <value>
                <fullName>Customer Maintenance</fullName>
            </value>
            <value>
                <fullName>Customer Onboarding</fullName>
            </value>
            <value>
                <fullName>Design Center</fullName>
            </value>
            <value>
                <fullName>ERS</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Order Resolution</fullName>
            </value>
            <value>
                <fullName>Pricing/Rebate/Cost</fullName>
            </value>
            <value>
                <fullName>Product Code/Item</fullName>
            </value>
            <value>
                <fullName>Proof Of Delivery</fullName>
            </value>
            <value>
                <fullName>Quality/Compliance</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Sample Request</fullName>
            </value>
            <value>
                <fullName>Sourcing/Quoting</fullName>
            </value>
            <value>
                <fullName>Vendor Claim</fullName>
            </value>
            <value>
                <fullName>Vendor Request</fullName>
            </value>
            <value>
                <fullName>Warehouse Only Vendor Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>