force-app/main/default/objects/Case/fields/Case_Owner_is_Queue__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_is_Queue__c</fullName>
    <formula>IF(LEFT(OwnerId, 3) = &quot;00G&quot;, &quot;TRUE&quot;,  &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner is Queue?</label>
    <type>Text</type>
</CustomField>