force-app/main/default/objects/Case/fields/Case_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Case_Product_Count__c</fullName>
    <inlineHelpText>Count of related Case Product records</inlineHelpText>
    <label>Case Product Count</label>
    <summaryForeignKey>Case_Product__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>