force-app/main/default/objects/Case/fields/Case_Reference2__c.field-meta.xml
<CustomField>
    <fullName>Case_Reference2__c</fullName>
    <formula>&quot;[ ref:&quot; &amp; LEFT($Organization.Id,4) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; ) &amp; &quot;.&quot; &amp; LEFT(Id,4) &amp; SUBSTITUTE(RIGHT(Id,11), &quot;0&quot;, &quot;&quot; ) &amp; &quot;:ref ]&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Reference2</label>
    <type>Text</type>
</CustomField>