force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>2/13/18 - Only used on VLS and eBusiness Cases</description>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complimentary items</fullName>
            </value>
            <value>
                <fullName>Follow up on strategic quote</fullName>
            </value>
            <value>
                <fullName>New product intro</fullName>
            </value>
            <value>
                <fullName>Revenue Tracker</fullName>
            </value>
            <value>
                <fullName>Special Offer</fullName>
            </value>
            <value>
                <fullName>Lost Business</fullName>
            </value>
            <value>
                <fullName>Migrating Business</fullName>
            </value>
            <value>
                <fullName>POD</fullName>
            </value>
            <value>
                <fullName>Pricing Discrepancy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Substitution</fullName>
            </value>
            <value>
                <fullName>Zilliant Pricing</fullName>
            </value>
            <value>
                <fullName>Warehouse item not found</fullName>
            </value>
            <value>
                <fullName>Shuttle item not received</fullName>
            </value>
            <value>
                <fullName>Wrong item filled</fullName>
            </value>
            <value>
                <fullName>Item left off</fullName>
            </value>
            <value>
                <fullName>APD</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>FSC</fullName>
            </value>
            <value>
                <fullName>NOA</fullName>
            </value>
            <value>
                <fullName>Demand Issue</fullName>
            </value>
            <value>
                <fullName>ERS Issue</fullName>
            </value>
            <value>
                <fullName>NIR</fullName>
            </value>
            <value>
                <fullName>Non-Stock</fullName>
            </value>
            <value>
                <fullName>Out of Stock</fullName>
            </value>
            <value>
                <fullName>Damaged Product</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Order Short</fullName>
            </value>
            <value>
                <fullName>Order Over</fullName>
            </value>
            <value>
                <fullName>Wrong Quantity Pulled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>