force-app/main/default/objects/Case/fields/Case_w_New_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_w_New_Email__c</fullName>
    <description>02/10/2022: Replaced with Case_with_New_Email__c field where currently used (Backlog ItemV: Item-3116)

CEI enhancement.
Designed for use on the My Console Cases with New Emails list view</description>
    <formula>Last_Inbound_Email_Time__c&gt;=LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unread/Not-Modified since last inbound email?</inlineHelpText>
    <label>Case w/ New Email? DEPRECATED</label>
    <type>Checkbox</type>
</CustomField>