force-app/main/default/objects/Case/fields/CaseCounter__c.field-meta.xml
<CustomField>
    <fullName>CaseCounter__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>