force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Used in the CEI rollout

Replacement for &quot;Reason&quot; field currently in production environment.</description>
    <inlineHelpText>What is this case about?</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Speciality__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warehouse/Indirect Order Entry</fullName>
            </value>
            <value>
                <fullName>Account Setup/Maintenance</fullName>
            </value>
            <value>
                <fullName>Billing Error</fullName>
            </value>
            <value>
                <fullName>Billing Verification Error</fullName>
            </value>
            <value>
                <fullName>CBSS</fullName>
            </value>
            <value>
                <fullName>CC2</fullName>
            </value>
            <value>
                <fullName>Collections/AR Request</fullName>
            </value>
            <value>
                <fullName>Company Information</fullName>
            </value>
            <value>
                <fullName>Cost Change Request</fullName>
            </value>
            <value>
                <fullName>Cost Correction</fullName>
            </value>
            <value>
                <fullName>I - Credit</fullName>
                <label>Credit</label>
            </value>
            <value>
                <fullName>Customer Billing Question</fullName>
            </value>
            <value>
                <fullName>I - Delivery Issue</fullName>
                <label>Delivery Issue</label>
            </value>
            <value>
                <fullName>Direct Order Entry</fullName>
            </value>
            <value>
                <fullName>Document Request</fullName>
            </value>
            <value>
                <fullName>ERS/Product Availability</fullName>
            </value>
            <value>
                <fullName>Existing Item Request</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>R - Information Only</fullName>
                <label>FYI/No Action Needed</label>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Internal Deviation</fullName>
            </value>
            <value>
                <fullName>Kitting/Converting</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Mass Vendor Update</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>R - Order Request</fullName>
                <label>Order Change Request</label>
            </value>
            <value>
                <fullName>Order Release</fullName>
            </value>
            <value>
                <fullName>Order Status/Document Request</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Pricing/Rebate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>