force-app/main/default/objects/Case/fields/Category_Reason__c.field-meta.xml
<CustomField>
    <fullName>Category_Reason__c</fullName>
    <description>Shows the value of either the category or the reason field so that users can view a categorization of both console and non-console cases.</description>
    <formula>IF(
ISBLANK(text(Category__c )) ,
  text(Reason__c ),  
text(Category__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What did the customer call in about?</inlineHelpText>
    <label>zzCategory/Reason</label>
    <type>Text</type>
</CustomField>