force-app/main/default/objects/Case/fields/Created_by_SFO__c.field-meta.xml
<CustomField>
    <fullName>Created_by_SFO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by Public Action for Case creation in SFO to indicate the Case was created by the SFO process</description>
    <label>zzCreated by SFO</label>
    <type>Checkbox</type>
</CustomField>