force-app/main/default/objects/Case/fields/Credit_and_Rebill__c.field-meta.xml
<CustomField>
    <fullName>Credit_and_Rebill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used for Credit &amp; Collections</description>
    <label>Credit and Rebill</label>
    <type>Checkbox</type>
</CustomField>