force-app/main/default/objects/Case/fields/Credit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Credit_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used to indicate if case is the result of a Credit Request
Retired 2/16/18.  Not used on NEW Cases Created on this date.</description>
    <inlineHelpText>Selected when the case is created in response to a Credit Request</inlineHelpText>
    <label>Credit Requested</label>
    <type>Checkbox</type>
</CustomField>