force-app/main/default/objects/Case/fields/Credit_to_Account_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_to_Account_Date__c</fullName>
    <description>Date the credit was issued to the Account</description>
    <label>Customer Credit to Account Date</label>
    <type>Date</type>
</CustomField>