force-app/main/default/objects/Case/fields/Credit_to_Account_Days__c.field-meta.xml
<CustomField>
    <fullName>Credit_to_Account_Days__c</fullName>
    <formula>Credit_to_Account_Date__c - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit to Account Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>