force-app/main/default/objects/Case/fields/CS_MAX_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>CS_MAX_Order_Number__c</fullName>
    <description>2/15/22  CH - Updated text options length from 8 to 255 apart of CX CEI enhancement request BL-3115
4/6/20 - MA - Updated Help Text
4/10/18 - MA - Updated for VOS go live on 4/12/18.  Removed MAX because the field will be used for all Order Numbers.
Used in CEI rollout.

Created for the customer service console for capturing the MAX order information. To be manually stamped.</description>
    <inlineHelpText>Order number field is required if the Category = O - Order Placed.</inlineHelpText>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>