force-app/main/default/objects/Case/fields/Current_Owner_s_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner_s_Agent_ID__c</fullName>
    <description>Used in CEI rollout. 

Used for Cisco routing. Passes the current owner&apos;s cisco ID as a variable to Cisco , which, if populated, will be the first option for routing an email.</description>
    <formula>Owner:User.CS_Telephony_Login_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Agent ID for routing.</inlineHelpText>
    <label>Current Owner&apos;s Agent ID</label>
    <type>Text</type>
</CustomField>