force-app/main/default/objects/Case/fields/CustomDescription__c.field-meta.xml
<CustomField>
    <fullName>CustomDescription__c</fullName>
    <label>CustomDescription</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>