force-app/main/default/objects/Case/fields/Customer_Expectation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Customer_Expectation_Summary__c</fullName>
    <label>Customer Expectation Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>