force-app/main/default/objects/Case/fields/Customer_Expectations_from_Veritiv__c.field-meta.xml
<CustomField>
    <fullName>Customer_Expectations_from_Veritiv__c</fullName>
    <label>Customer Expectations from Veritiv?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Explain how the problem will be corrected</fullName>
            </value>
            <value>
                <fullName>Fill out a Corrective Action Response form (CAR,SCAR)</fullName>
            </value>
            <value>
                <fullName>Inspect product that maybe defective/damaged</fullName>
            </value>
            <value>
                <fullName>Investigate why problem occurred</fullName>
            </value>
            <value>
                <fullName>Response from a Senior Manager/Quality Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>