force-app/main/default/objects/Case/fields/Customer_Is__c.field-meta.xml
<CustomField>
    <fullName>Customer_Is__c</fullName>
    <formula>IF(ISPICKVAL (Relationship_Status__c, &quot;green&quot;), IMAGE(&quot;/resource/a3PLgreen&quot;, &quot;green&quot;, 25, 25),&quot;&quot;)+ 
IF(ISPICKVAL (Relationship_Status__c, &quot;yellow&quot;), IMAGE(&quot;/resource/a3PLyellow&quot;, &quot;yellow&quot;, 25, 25),&quot;&quot;)+ 
IF(ISPICKVAL (Relationship_Status__c, &quot;red&quot;), IMAGE(&quot;/resource/a3PLRed&quot;, &quot;red&quot;, 25, 25),&quot;&quot;)</formula>
    <label>zzCustomer Is</label>
    <type>Text</type>
</CustomField>