force-app/main/default/objects/Case/fields/Customer_Issued_CAR__c.field-meta.xml
<CustomField>
    <fullName>Customer_Issued_CAR__c</fullName>
    <description>QA data for tracking issues</description>
    <label>Customer Issued CAR#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>