force-app/main/default/objects/Case/fields/Customer_PO_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Price__c</fullName>
    <description>Retired 2/16/18.  Not used on NEW Cases Created on this date.</description>
    <label>Customer PO Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>