force-app/main/default/objects/Case/fields/Date_Case_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_Opened__c</fullName>
    <description>Used in CEI rollout.

This exists to be able to report on a specific day</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date that the case was opened.</inlineHelpText>
    <label>Date Case Opened</label>
    <type>Date</type>
</CustomField>