force-app/main/default/objects/Case/fields/Date_Received_Item_1__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_Item_1__c</fullName>
    <label>Customer Date Received Item #1</label>
    <type>Date</type>
</CustomField>