force-app/main/default/objects/Case/fields/Date_Received_Item_2__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_Item_2__c</fullName>
    <label>Customer Date Received Item #2</label>
    <type>Date</type>
</CustomField>