force-app/main/default/objects/Case/fields/Date_Received_Item_3__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_Item_3__c</fullName>
    <label>Customer Date Received Item #3</label>
    <type>Date</type>
</CustomField>