force-app/main/default/objects/Case/fields/Delivery_Appointment_Required__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Appointment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Retired 2/16/18.  Not used on NEW Cases Created on this date.</description>
    <label>Delivery Appt Reqd</label>
    <type>Checkbox</type>
</CustomField>