force-app/main/default/objects/Case/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>Retired 2/16/18.  Not used on NEW Cases Created on this date.</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>